--- a/app/views/carros/show.html.erb
+++ b/app/views/carros/show.html.erb
@@ -1,10 +1,15 @@
-<p style="color: green"><%= notice %></p>
+<section>
+  <p style="color: green"><%= notice %></p> 
 
-<%= render @carro %>
+  <%= render @carro %>  
 
-<div>
-  <%= link_to "Edit this carro", edit_carro_path(@carro) %> |
-  <%= link_to "Back to carros", carros_path %>
+  <div>
+    <button>
+      <%= link_to "Edit this carro", edit_carro_path(@carro) %> |
+      <%= link_to "Back to carros", carros_path %>
+    </button>
+    <br>  
+    <%= button_to "Destroy this carro", @carro, method: :delete %>
+  </div>
 
-  <%= button_to "Destroy this carro", @carro, method: :delete %>
-</div>
+</section>
