--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,11 @@
   </head>
 
   <body>
+    <main>
+      <header>
+        <h1>Informacion y Entrada de un nuevo vehiculo.</h1>
+      </header>
+    </main>
     <%= yield %>
   </body>
 </html>
