--- a/app/views/carros/new.html.erb
+++ b/app/views/carros/new.html.erb
@@ -1,11 +1,13 @@
 <% content_for :title, "New carro" %>
+<section>
+  <h1>New carro</h1>
 
-<h1>New carro</h1>
+  <%= render "form", carro: @carro %>
 
-<%= render "form", carro: @carro %>
+  <br>
 
-<br>
+  <div>
+    <%= link_to "Back to carros", carros_path %>
+  </div>
 
-<div>
-  <%= link_to "Back to carros", carros_path %>
-</div>
+</section>
