--- a/app/views/carros/show.html.erb
+++ b/app/views/carros/show.html.erb
@@ -1,15 +1,15 @@
-<section>
-  <p style="color: green"><%= notice %></p> 
+<p style="color: green"><%= notice %></p> 
 
   <%= render @carro %>  
 
-  <div>
-    <button>
-      <%= link_to "Edit this carro", edit_carro_path(@carro) %> |
-      <%= link_to "Back to carros", carros_path %>
-    </button>
-    <br>  
-    <%= button_to "Destroy this carro", @carro, method: :delete %>
-  </div>
+    <div>
+          <button type="button" class="btn btn-outline-info">
+            <%= link_to "Edit this carro", edit_carro_path(@carro) %> |
+            <%= link_to "Back to carros", carros_path %>
+          </button>
+          <br>
+          <%= button_to "Destroy this carro", @carro, method: :delete %>
+    </div>
 
-</section>
+
+  
