--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,50 +19,50 @@
             display: flex;
             align-items: center;
             justify-content: center; 
-            gap: 15px; /* Espacio entre la imagen y el texto */
-            text-align: left; /* Ya no necesitas centrar el texto */
-            margin-top: 50px; /* Reducido para que no haya demasiado espacio arriba */
+            gap: 15px; 
+            text-align: left; 
             font-style: oblique;
-            color: #3f48d1;
-            
+            color: #e0c10f;
 
-            .logo{  
-                width: 100px;
-                height: auto;
-                display: block;
-                border-radius: 50%;
+            .imagen{
+                height: 100px;
+                width: 200px;
             }
-
         }
+        nav {
+            border: 1px solid black;
+            height: auto;
+            width: auto;
+            text-align: center;
+            font-style: oblique;
+            font-size: large;
 
-        aside, section {
-            display: inline-block;
-            vertical-align: top;
-            white-space: normal;
         }
 
         aside {
             border: 1px solid black; 
-            height: 600px;
-            width: 200px;
-
+            height: 400px;
+            width: 20%;
+            text-align: center;
+            float: left;
         }
 
         section {
             border: 1px solid black;
-            height: auto;
-            width: 1100px;
+            height: 400px;
+            width: 70%;
             text-align: center;
+            float: right;
+          
+        }
 
-            .gif {
-                width: 300px;
-                height: auto;
-                display: block;
-                justify-content: center;
-                align-items: flex-start;
-                margin-top: -200px;
-            }
-
+        footer {
+            border: 1px solid black;
+            height: 100px;
+            width: 100%;
+            text-align: center;
+            float: inline-end;
+              
         }
 
     }
