--- a/app/views/homes/new.html.erb
+++ b/app/views/homes/new.html.erb
@@ -6,6 +6,6 @@
 
 <br>
 
-<div>
-  <%= link_to "Volver a la pagina principal", homes_path %>
+<div class="boton">
+  <%= link_to "Volver a la página principal", "/homes" , class: 'btn btn-secondary' %>  
 </div>
