--- a/app/views/homes/_form.html.erb
+++ b/app/views/homes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: home) do |form| %>
+<%= form_with(model: @home) do |form| %>
   <% if home.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(home.errors.count, "error") %> prohibited this home from being saved:</h2>
@@ -11,22 +11,23 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :nombre, style: "display: block" %>
+  
+  <div class="formulario">
+    <%= form.label :"Nombre Completo", style: "display: block" %>
     <%= form.text_field :nombre %>
   </div>
 
-  <div>
-    <%= form.label :desc, style: "display: block" %>
+  <div class="formulario">
+    <%= form.label :Producto, style: "display: block" %>
     <%= form.text_field :desc %>
   </div>
 
-  <div>
-    <%= form.label :direccion, style: "display: block" %>
+  <div class="formulario">
+    <%= form.label :Dirección, style: "display: block" %>
     <%= form.text_field :direccion %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="boton">
+    <%= form.submit "Crear", class: "btn btn-success" %>
   </div>
 <% end %>
