--- a/app/views/homes/edit.html.erb
+++ b/app/views/homes/edit.html.erb
@@ -6,7 +6,7 @@
 
 <br>
 
-<div>
-  <%= link_to "Mirar este pedido", @home %> |
-  <%= link_to "Volver a la pagina principal", homes_path %>
+<div class="boton">
+  <%= link_to "Mirar este pedido", @home, class: 'btn btn-secondary' %>
+  <%= link_to "Volver a la pagina Anterior", home_path, class: 'btn btn-secondary' %>
 </div>
