--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,10 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @home %>
+<%= render partial: 'home', locals: { home: @home } %>  
 
 <div>
-  <%= link_to "Editar este pedido", edit_home_path(@home) %> |
-  <%= link_to "Volver a la pagina principal", homes_path %>
+  <%= link_to "Editar este pedido", edit_home_path(@home), class: 'btn btn-secondary'%>
+  <%= link_to "Volver a la página principal", '/homes', class: 'btn btn-secondary' %>  
 
-  <%= button_to "Borrar este pedido", @home, method: :delete %>
+  <%= button_to "Borrar este pedido", @home, method: :delete , class: "btn btn-danger"%>
 </div>
