--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
     <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
     <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
 
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
+    <link rel="icon" href="<%= asset_path 'la Terraza del pri sin fondo Logo.png' %>" type="image/png">
+    <link rel="icon" href="<%= asset_path 'la Terraza del pri sin fondo Logo.svg' %>" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="<%= asset_path 'la Terraza del pri sin fondo Logo.png' %>">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
@@ -24,29 +24,32 @@
 
   <body>
     <main>
-        <header>
-          <h1>LA TERRAZA DEL PRI</h1>
-        </header>
-        <nav>
-          <h2>¡Explosión de sabor en cada bocado! 🌮🍔</h2>
-        </nav>
-         <aside>
-              <%= link_to "Nuevo Pedido", new_home_path %> 
-            </aside>
-          <section>
-            <%=yield %>
-          </section>
+      <header>
+        <h1>LA TERRAZA DEL PRI</h1>
+        
+      </header>
+      <nav>
+        <h2>¡Explosión de sabor en cada bocado! 🌮🍔</h2>
+      </nav>
+      <section class="section">
+        <aside>
+          <%= link_to "Nuevo Pedido", new_home_path %> 
+        </aside>
+        <section class="sect">
+          <%=yield %>
+        </section>
+      </section>
       <footer>
         <strong>
-        Donde nos puedes encontrar: Calle 56#8-22 ciudadela metropolitana - soledad<br>
-        Siguenos en nuestras redes sociales para siempre estar atento a cualquier novedad<br>
-        <a href="https://www.instagram.com/Laterrazadelpri/" target="_blank" rel="noopener noreferrer">
-          Síguenos en Instagram
-        </a><br>
+          Dirección: Calle 56#8-22 ciudadela metropolitana - soledad<br>
+          Siguenos en nuestras redes sociales para siempre estar atento a cualquier novedad<br>
+          <a href="https://www.instagram.com/Laterrazadelpri/" target="_blank" rel="noopener noreferrer">
+            Síguenos en Instagram
+          </a><br>
           <a href="https://www.tiktok.com/@laterrazadelpri?_t=8iQXZMitniI&_r=1" target="_blank" rel="noopener noreferrer">
             Síguenos en TikTok
           </a><br>
-          Nuestra linea de contacto: +57 311 3678033
+          Linea de contacto: +57 311 3678033
         </strong>
       </footer>
     </main>
